--- a/card.css
+++ b/card.css
@@ -4,6 +4,7 @@
     background-color:#ffff;
     border-radius: 20px;
     box-shadow: black;
+    margin-top: 30px;
     
 }
 .body{
@@ -21,14 +22,14 @@ img{
    margin-top: 30PX;
     
    width: 90px ;
-   border-radius: 10%;
+   border-radius: 5%;
    
 }
 .div1{
     padding-top: 10px;
     height: 80px;
     width: 200px;
-    background-color: rgb(190, 18, 18);
+    background-color: rgb(184, 3, 3);
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
    
@@ -36,8 +37,8 @@ img{
 .div2{
     
     
-    height: 10px;
-    width: 30%;
+    height: 8px;
+    width: 35%;
     background-color:black;
     border-radius: 10px;
 }
